feat: add account profile settings
